FRW-8868 Adjusted buddy.yml.

--- a/buddy.yml
+++ b/buddy.yml
@@ -1,4 +1,4 @@
-- pipeline: '[Hackathon] Snyk Validation'
+- pipeline: 'Snyk Validation'
   events:
       - type: 'PUSH'
         refs:
@@ -25,7 +25,7 @@
             - 'apt-get update && apt-get install -y golang-go'
         shell: 'BASH'
 
-- pipeline: '[Hackathon] Standard Validation'
+- pipeline: 'Standard Validation'
   events:
       - type: 'PUSH'
         refs:
@@ -223,7 +223,7 @@
             - 'apt-get update && apt-get -y install php8.2-cli php8.2-mbstring'
         shell: 'BASH'
 
-- pipeline: '[Hackathon] Validation / Prefer Lowest'
+- pipeline: 'Validation / Prefer Lowest'
   events:
       - type: 'PUSH'
         refs:
@@ -334,7 +334,7 @@
             - '.ci/snippet/FINISH'
         shell: 'BASH'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.1 / MariaDB / Functional Tests'
+- pipeline: 'Docker / Alpine / PHP 8.1 / MariaDB / Functional Tests'
   events:
       - type: 'PUSH'
         refs:
@@ -379,7 +379,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.1 / MariaDB / Functional Tests / Dynamic Store'
+- pipeline: 'Docker / Alpine / PHP 8.1 / MariaDB / Functional Tests / Dynamic Store'
   events:
       - type: 'PUSH'
         refs:
@@ -430,7 +430,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.1 / PostgreSQL / Functional Tests'
+- pipeline: 'Docker / Alpine / PHP 8.1 / PostgreSQL / Functional Tests'
   events:
       - type: 'PUSH'
         refs:
@@ -471,7 +471,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.1 / PostgreSQL / Functional Tests / Dynamic Store'
+- pipeline: 'Docker / Alpine / PHP 8.1 / PostgreSQL / Functional Tests / Dynamic Store'
   events:
       - type: 'PUSH'
         refs:
@@ -522,7 +522,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.1 / MariaDB / Acceptance'
+- pipeline: 'Docker / Alpine / PHP 8.1 / MariaDB / Acceptance'
   events:
       - type: 'PUSH'
         refs:
@@ -566,7 +566,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.1 / MariaDB / Acceptance / Dynamic Store'
+- pipeline: 'Docker / Alpine / PHP 8.1 / MariaDB / Acceptance / Dynamic Store'
   events:
       - type: 'PUSH'
         refs:
@@ -612,7 +612,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.1 / PostgreSQL / Acceptance'
+- pipeline: 'Docker / Alpine / PHP 8.1 / PostgreSQL / Acceptance'
   events:
       - type: 'PUSH'
         refs:
@@ -656,7 +656,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.1 / PostgreSQL / Acceptance / Dynamic Store'
+- pipeline: 'Docker / Alpine / PHP 8.1 / PostgreSQL / Acceptance / Dynamic Store'
   events:
       - type: 'PUSH'
         refs:
@@ -706,7 +706,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.2 / MariaDB / Functional Tests'
+- pipeline: 'Docker / Alpine / PHP 8.2 / MariaDB / Functional Tests'
   events:
       - type: 'PUSH'
         refs:
@@ -751,7 +751,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.2 / MariaDB / Functional Tests / Dynamic Store'
+- pipeline: 'Docker / Alpine / PHP 8.2 / MariaDB / Functional Tests / Dynamic Store'
   events:
       - type: 'PUSH'
         refs:
@@ -802,7 +802,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.2 / PostgreSQL / Functional Tests'
+- pipeline: 'Docker / Alpine / PHP 8.2 / PostgreSQL / Functional Tests'
   events:
       - type: 'PUSH'
         refs:
@@ -847,7 +847,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.2 / PostgreSQL / Functional Tests / Dynamic Store'
+- pipeline: 'Docker / Alpine / PHP 8.2 / PostgreSQL / Functional Tests / Dynamic Store'
   events:
       - type: 'PUSH'
         refs:
@@ -898,7 +898,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.2 / MariaDB / Acceptance'
+- pipeline: 'Docker / Alpine / PHP 8.2 / MariaDB / Acceptance'
   events:
       - type: 'PUSH'
         refs:
@@ -942,7 +942,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.2 / MariaDB / Acceptance / Dynamic Store'
+- pipeline: 'Docker / Alpine / PHP 8.2 / MariaDB / Acceptance / Dynamic Store'
   events:
       - type: 'PUSH'
         refs:
@@ -992,7 +992,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.2 / PostgreSQL / Acceptance'
+- pipeline: 'Docker / Alpine / PHP 8.2 / PostgreSQL / Acceptance'
   events:
       - type: 'PUSH'
         refs:
@@ -1036,7 +1036,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.2 / PostgreSQL / Acceptance / Dynamic Store'
+- pipeline: 'Docker / Alpine / PHP 8.2 / PostgreSQL / Acceptance / Dynamic Store'
   events:
       - type: 'PUSH'
         refs:
@@ -1087,7 +1087,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Debian / PHP 8.2 / Frontend & Assets'
+- pipeline: 'Docker / Debian / PHP 8.2 / Frontend & Assets'
   events:
       - type: 'PUSH'
         refs:
@@ -1130,7 +1130,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.1 / MariaDB / Functional Tests / Prefer Lowest'
+- pipeline: 'Docker / Alpine / PHP 8.1 / MariaDB / Functional Tests / Prefer Lowest'
   events:
       - type: 'PUSH'
         refs:
@@ -1184,7 +1184,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.1 / MariaDB / Functional Tests / Prefer Lowest / Dynamic Store'
+- pipeline: 'Docker / Alpine / PHP 8.1 / MariaDB / Functional Tests / Prefer Lowest / Dynamic Store'
   events:
       - type: 'PUSH'
         refs:
@@ -1244,7 +1244,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.1 / MariaDB / Acceptance / Prefer Lowest'
+- pipeline: 'Docker / Alpine / PHP 8.1 / MariaDB / Acceptance / Prefer Lowest'
   events:
       - type: 'PUSH'
         refs:
@@ -1297,7 +1297,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_LARGE'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.1 / MariaDB / Acceptance / Prefer Lowest / Dynamic Store'
+- pipeline: 'Docker / Alpine / PHP 8.1 / MariaDB / Acceptance / Prefer Lowest / Dynamic Store'
   events:
       - type: 'PUSH'
         refs:
@@ -1356,7 +1356,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.1 / MariaDB / Robot'
+- pipeline: 'Docker / Alpine / PHP 8.1 / MariaDB / Robot'
   events:
       - type: 'PUSH'
         refs:
@@ -1419,7 +1419,7 @@
               direction: 'PIPELINE_TO_VM'
         docker_layer_caching_scope: 'ACTION'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.2 / PostgreSQL / Robot'
+- pipeline: 'Docker / Alpine / PHP 8.2 / PostgreSQL / Robot'
   events:
       - type: 'PUSH'
         refs:
@@ -1482,7 +1482,7 @@
               direction: 'PIPELINE_TO_VM'
         docker_layer_caching_scope: 'ACTION'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.2 / MariaDB / Robot / API / Dynamic Store'
+- pipeline: 'Docker / Alpine / PHP 8.2 / MariaDB / Robot / API / Dynamic Store'
   events:
       - type: 'PUSH'
         refs:
@@ -1552,7 +1552,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.2 / MariaDB / Cypress'
+- pipeline: 'Docker / Alpine / PHP 8.2 / MariaDB / Cypress'
   events:
       - type: 'PUSH'
         refs:
@@ -1616,7 +1616,7 @@
               direction: 'PIPELINE_TO_VM'
         docker_layer_caching_scope: 'ACTION'
 
-- pipeline: '[Hackathon] Docker / Alpine / PHP 8.2 / MariaDB / Cypress / Dynamic Store'
+- pipeline: 'Docker / Alpine / PHP 8.2 / MariaDB / Cypress / Dynamic Store'
   events:
       - type: 'PUSH'
         refs:
@@ -1686,7 +1686,7 @@
               direction: 'PIPELINE_TO_VM'
         docker_layer_caching_scope: 'ACTION'
 
-- pipeline: '[Hackathon] Positive / Docker / Alpine / PHP 8.2 / MariaDB / Robot / API / Dynamic Store'
+- pipeline: 'Positive / Docker / Alpine / PHP 8.2 / MariaDB / Robot / API / Dynamic Store'
   events:
       - type: 'PUSH'
         refs:
@@ -1756,7 +1756,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Negative / Docker / Alpine / PHP 8.1 / MariaDB / Robot / API / Dynamic Store'
+- pipeline: 'Negative / Docker / Alpine / PHP 8.1 / MariaDB / Robot / API / Dynamic Store'
   events:
       - type: 'PUSH'
         refs:
