FRW-7213 A few adjustments

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -180,6 +180,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.api.mariadb.dynamic-store-off.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing codecept fixtures
                   docker/sdk testing console queue:worker:start --stop-when-empty
                   docker/sdk testing codecept run -c codeception.api.yml
@@ -207,6 +208,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.api.mariadb.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing codecept fixtures
                   docker/sdk testing console queue:worker:start --stop-when-empty
                   docker/sdk testing codecept run -c codeception.api.yml
@@ -232,6 +234,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.acceptance.mariadb.dynamic-store-off.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing console queue:worker:start --stop-when-empty
                   docker/sdk testing codecept run -c codeception.acceptance.yml
 
@@ -259,6 +262,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.acceptance.mariadb.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing console queue:worker:start --stop-when-empty
                   docker/sdk testing codecept run -c codeception.acceptance.yml
 
@@ -283,6 +287,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.functional.mariadb.dynamic-store-off.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing codecept run -c codeception.functional.yml
 
     php-82-mariadb-functional-alpine:
@@ -308,6 +313,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.functional.mariadb.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing codecept run -c codeception.functional.yml
 
     php-81-mariadb-glue-alpine-dynamic-store-off:
@@ -331,6 +337,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.api.mariadb.dynamic-store-off.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing codecept fixtures
                   docker/sdk testing console queue:worker:start --stop-when-empty
                   docker/sdk testing codecept run -c codeception.api.yml
@@ -358,6 +365,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.api.mariadb.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing codecept fixtures
                   docker/sdk testing console queue:worker:start --stop-when-empty
                   docker/sdk testing codecept run -c codeception.api.yml
@@ -383,6 +391,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.acceptance.dynamic-store-off.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing console queue:worker:start --stop-when-empty
                   docker/sdk testing codecept run -c codeception.acceptance.yml
 
@@ -409,6 +418,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.acceptance.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing console queue:worker:start --stop-when-empty
                   docker/sdk testing codecept run -c codeception.acceptance.yml
 
@@ -433,6 +443,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.acceptance.dynamic-store-off.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing console queue:worker:start --stop-when-empty
                   docker/sdk testing codecept run -c codeception.functional.yml
 
@@ -460,6 +471,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.acceptance.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing console queue:worker:start --stop-when-empty
                   docker/sdk testing codecept run -c codeception.functional.yml
 
@@ -484,6 +496,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.acceptance.mariadb.dynamic-store-off.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing console queue:worker:start --stop-when-empty
                   docker/sdk testing codecept run -c codeception.acceptance.yml
 
@@ -511,6 +524,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.acceptance.mariadb.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing console queue:worker:start --stop-when-empty
                   docker/sdk testing codecept run -c codeception.acceptance.yml
 
@@ -535,6 +549,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.functional.mariadb.dynamic-store-off.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing codecept run -c codeception.functional.yml
 
     php-81-mariadb-functional-alpine:
@@ -561,6 +576,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.functional.mariadb.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing codecept run -c codeception.functional.yml
 
     php-81-postgres-functional-debian-dynamic-store-off:
@@ -585,6 +601,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.functional.dynamic-store-off.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing codecept run -c codeception.functional.yml
 
     php-81-postgres-functional-debian:
@@ -610,6 +627,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.functional.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing codecept run -c codeception.functional.yml
 
     php-81-frontend-and-assets-alpine:
@@ -701,6 +719,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.acceptance.mariadb.dynamic-store-off.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   docker/sdk testing console queue:worker:start --stop-when-empty
                   sudo bash -c "echo '127.0.0.1 backend-api.at.spryker.local backend-api.de.spryker.local backend-gateway.at.spryker.local backend-gateway.de.spryker.local backoffice.at.spryker.local backoffice.de.spryker.local date-time-configurator-example.spryker.local glue.at.spryker.local glue.de.spryker.local yves.at.spryker.local yves.de.spryker.local glue-backend.de.spryker.local glue-storefront.de.spryker.local' >> /etc/hosts"
             - name: Run Tests
@@ -754,6 +773,7 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.acceptance.yml
                   docker/sdk up -t
+                  docker/sdk cli composer dump-autoload -o -a --apcu
                   sudo bash -c "echo '127.0.0.1 backend-api.eu.spryker.local backend-api.us.spryker.local backend-gateway.eu.spryker.local backend-gateway.us.spryker.local backoffice.eu.spryker.local backoffice.us.spryker.local glue-backend.eu.spryker.local glue-backend.us.spryker.local glue-storefront.eu.spryker.local glue-storefront.us.spryker.local glue.eu.spryker.local glue.us.spryker.local mail.spryker.local mp.eu.spryker.local mp.us.spryker.local queue.spryker.local scheduler.spryker.local spryker.local swagger.spryker.local yves.eu.spryker.local yves.us.spryker.local' >> /etc/hosts"
             - name: Custom commands
               continue-on-error: false
