--- a/config/install/docker.ci.acceptance.yml
+++ b/config/install/docker.ci.acceptance.yml
@@ -107,6 +107,9 @@ sections:
         import-eu-region-demodata:
             command: 'vendor/bin/console data:import --config=data/import/local/full_EU.yml'
 
+        apply-scheduled-prices:
+            command: 'vendor/bin/console price-product-schedule:apply'
+
         setup-search-create-sources:
             command: 'vendor/bin/console search:setup:sources'
 
