ACP-3661 Added the ACL entity synchronization command. (#9015)
ACP-3661 Apply ACL rules for existing merchant users on NORMAL deployment

--- a/config/install/production.yml
+++ b/config/install/production.yml
@@ -52,3 +52,7 @@ sections:
         glossary:
             command: 'vendor/bin/console data:import:glossary -vvv --no-ansi'
             stores: true
+    acl:
+        acl-entity-synchronize:
+            command: 'vendor/bin/console acl-entity:synchronize -vvv --no-ansi'
+            stores: true
