--- a/deploy.multi-db.dynamic-store-off.yml
+++ b/deploy.multi-db.dynamic-store-off.yml
@@ -4,7 +4,7 @@ namespace: spryker_m
 tag: 'dev'
 
 environment: docker.dev
-pipeline: docker.multi-db.yml
+pipeline: docker.multi-db.dynamic-store-off.yml
 image:
     tag: spryker/php:8.2
     php:
