--- a/config/install/docker.ci.acceptance.dynamic-store-off.cypress.yml
+++ b/config/install/docker.ci.acceptance.dynamic-store-off.cypress.yml
@@ -7,6 +7,30 @@ sections:
         generate-transfers:
             command: 'vendor/bin/console transfer:generate'
 
+        router-cache-warmup-yves:
+            command: 'vendor/bin/yves router:cache:warm-up'
+
+        router-cache-warmup-backoffice:
+            command: 'vendor/bin/console router:cache:warm-up:backoffice'
+
+        oms-process-cache-warmup:
+            command: 'vendor/bin/console oms:process-cache:warm-up'
+
+        router-cache-warmup-backend-gateway:
+            command: 'vendor/bin/console router:cache:warm-up:backend-gateway'
+
+        router-cache-warmup-merchant-portal:
+            command: 'vendor/bin/console router:cache:warm-up:merchant-portal'
+
+        twig-cache-warmup:
+            command: 'vendor/bin/console twig:cache:warmer'
+
+        navigation-cache-warmup:
+            command: 'vendor/bin/console navigation:build-cache'
+
+        rest-request-validation-cache-warmup:
+            command: 'vendor/bin/console rest-api:build-request-validation-cache'
+
         propel-copy-schema:
             command: 'vendor/bin/console propel:schema:copy'
 
@@ -38,6 +62,45 @@ sections:
         rest-api-generate-documentation:
             command: 'vendor/bin/console rest-api:generate:documentation'
 
+    build-static:
+        dependencies-install:
+            command: 'vendor/bin/console frontend:project:install-dependencies'
+
+    build-static-production:
+        excluded: true
+        yves-build-frontend:
+            command: 'vendor/bin/console frontend:yves:build -e production'
+
+        zed-build-frontend:
+            command: 'vendor/bin/console frontend:zed:build -e production'
+
+        merchant-portal-build-frontend:
+            command: 'vendor/bin/console frontend:mp:build -e production'
+            timeout: 1600
+
+        date-time-product-configurator:
+            command: 'vendor/bin/console frontend:date-time-product-configurator:build'
+
+    build-static-development:
+        yves-build-frontend:
+            command: 'vendor/bin/console frontend:yves:build'
+
+        zed-build-frontend:
+            command: 'vendor/bin/console frontend:zed:build'
+
+        merchant-portal-build-frontend:
+            command: 'vendor/bin/console frontend:mp:build'
+            timeout: 1600
+
+        date-time-product-configurator:
+            command: 'vendor/bin/console frontend:date-time-product-configurator:build'
+
+    init-storages-per-store:
+        queue-setup:
+            command: 'vendor/bin/console queue:setup'
+        setup-search-create-sources:
+            command: 'vendor/bin/console search:setup:sources'
+
     init-storages-per-region:
         propel-copy-schema:
             command: 'vendor/bin/console propel:schema:copy'
@@ -61,14 +124,11 @@ sections:
             command: 'vendor/bin/console setup:init-db'
 
     demodata:
-        queue-setup:
-            command: 'vendor/bin/console queue:setup'
-
         import-eu-region-demodata:
             command: 'vendor/bin/console data:import --config=data/import/local/full_EU.yml'
 
-        setup-search-create-sources:
-            command: 'vendor/bin/console search:setup:sources'
+        apply-scheduled-prices:
+            command: 'vendor/bin/console price-product-schedule:apply'
 
         update-product-labels:
             command: 'vendor/bin/console product-label:relations:update'
