--- a/config/install/docker.ci.acceptance.dynamic-store-off.yml
+++ b/config/install/docker.ci.acceptance.dynamic-store-off.yml
@@ -78,6 +78,12 @@ sections:
         zed-build-frontend:
             command: 'vendor/bin/console frontend:zed:build'
 
+    init-storages-per-store:
+        queue-setup:
+            command: 'vendor/bin/console queue:setup'
+        setup-search-create-sources:
+            command: 'vendor/bin/console search:setup:sources'
+
     init-storages-per-region:
         propel-copy-schema:
             command: 'vendor/bin/console propel:schema:copy'
@@ -97,18 +103,15 @@ sections:
         propel-migration-cleanup:
             command: 'vendor/bin/console propel:migration:delete'
 
-    demodata:
-        queue-setup:
-            command: 'vendor/bin/console queue:setup'
-
         init-database:
             command: 'vendor/bin/console setup:init-db'
 
+    demodata:
         import-eu-region-demodata:
             command: 'vendor/bin/console data:import --config=data/import/local/full_EU.yml'
 
-        setup-search-create-sources:
-            command: 'vendor/bin/console search:setup:sources'
+        apply-scheduled-prices:
+            command: 'vendor/bin/console price-product-schedule:apply'
 
         update-product-labels:
             command: 'vendor/bin/console product-label:relations:update'
