--- a/deploy.ci.acceptance.yml
+++ b/deploy.ci.acceptance.yml
@@ -94,6 +94,9 @@ services:
         root:
             username: 'root'
             password: 'secret'
+    endpoints:
+        localhost:5432:
+            protocol: tcp
     broker:
         engine: rabbitmq
         version: '3.9'
