--- a/package.json
+++ b/package.json
@@ -117,5 +117,14 @@
         "typescript": "~5.4.2",
         "webpack": "~5.88.2",
         "webpack-merge": "~5.10.0"
+    },
+    "overrides": {
+        "webpack-dev-server": {
+            "express": "^4.20.0"
+        },
+        "express": {
+            "path-to-regexp": "~0.1.10",
+            "body-parser": "1.20.2"
+        }
     }
 }
