--- a/package.json
+++ b/package.json
@@ -119,6 +119,13 @@
         "webpack-merge": "~5.10.0"
     },
     "overrides": {
-        "ws": "^8.17.1"
+        "ws": "^8.17.1",
+        "webpack-dev-server": {
+            "express": "^4.20.0"
+        },
+        "express": {
+            "path-to-regexp": "~0.1.10",
+            "body-parser": "1.20.2"
+        }
     }
 }
