--- a/package.json
+++ b/package.json
@@ -125,7 +125,8 @@
         },
         "express": {
             "path-to-regexp": "~0.1.10",
-            "body-parser": "1.20.2"
-        }
+            "body-parser": "^1.20.3"
+        },
+        "rollup": "^4.22.4"
     }
 }
