Revert "Fixed package.json workspaces."
This reverts commit 99f5e38a9d4ff6f28a37614f9c7b3a3a5c1f7294.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "url": "https://spryker.com/"
     },
     "workspaces": [
-        "vendor/spryker/spryker/*",
-        "vendor/spryker/spryker/*/assets/Zed"
+        "vendor/spryker/*",
+        "vendor/spryker/*/assets/Zed"
     ],
     "scripts": {
         "yves": "node ./frontend/build development",
