--- a/package.json
+++ b/package.json
@@ -120,11 +120,8 @@
     },
     "overrides": {
         "webpack-dev-server": {
-            "express": "^4.20.0"
+            "express": "^4.21.0"
         },
-        "express": {
-            "path-to-regexp": "~0.1.10",
-            "body-parser": "1.20.2"
-        }
+        "micromatch": "^4.0.8"
     }
 }
