FRW-9118: fix deploy file

--- a/deploy.dynamic-store-off.yml
+++ b/deploy.dynamic-store-off.yml
@@ -109,8 +109,8 @@ groups:
                 endpoints:
                     date-time-configurator-example.spryker.local:
                         entry-point: Configurator
-                    yves.eu.spryker.local:
-                        region: EU
+                    yves.de.spryker.local:
+                        store: DE
                         services:
                             session:
                                 namespace: 2
