CC-34259: Product comparison.  (#9001)
CC-34259 Product comparison (Fixathon)

--- a/tsconfig.yves.json
+++ b/tsconfig.yves.json
@@ -6,6 +6,9 @@
             "ServicePointWidget/*": [
                 "./vendor/spryker/spryker-shop/Bundles/ServicePointWidget/src/SprykerShop/Yves/ServicePointWidget/Theme/default/*"
             ],
+            "ProductComparisonWidget/*": [
+                "./vendor/spryker/spryker-shop/Bundles/ProductComparisonWidget/src/SprykerShop/Yves/ProductComparisonWidget/Theme/default/*"
+            ],
             "ShopUi/*": ["./vendor/spryker/spryker-shop/Bundles/ShopUi/src/SprykerShop/Yves/ShopUi/Theme/default/*"]
         }
     }
