--- a/package.json
+++ b/package.json
@@ -120,7 +120,11 @@
     },
     "overrides": {
         "webpack-dev-server": {
-            "express": "^4.21.0"
+            "express": "^4.21.0",
+            "http-proxy-middleware": "^3.0.1"
+        },
+        "@angular-devkit/build-angular": {
+            "http-proxy-middleware": "^3.0.1"
         },
         "micromatch": "^4.0.8"
     }
