FRW-8773 Added PHPUnit 11 support. (#9071)
FRW-8773 Added PHP Unit 11 support.

--- a/buddy.yml
+++ b/buddy.yml
@@ -361,6 +361,7 @@
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
+            - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.glue.yml'
             - '.ci/snippet/FINISH'
@@ -406,6 +407,7 @@
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
+            - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.glue.yml'
             - '.ci/snippet/FINISH'
@@ -453,6 +455,7 @@
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
+            - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.glue.yml'
             - '.ci/snippet/FINISH'
@@ -498,6 +501,7 @@
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
+            - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.glue.yml'
             - '.ci/snippet/FINISH'
@@ -733,6 +737,7 @@
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
+            - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.glue.yml'
             - '.ci/snippet/FINISH'
@@ -778,6 +783,7 @@
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
+            - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.glue.yml'
             - '.ci/snippet/FINISH'
@@ -829,6 +835,7 @@
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
+            - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.glue.yml'
             - '.ci/snippet/FINISH'
@@ -874,6 +881,7 @@
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
+            - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.glue.yml'
             - '.ci/snippet/FINISH'
@@ -1165,6 +1173,7 @@
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
+            - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.glue.yml'
             - '.ci/snippet/FINISH'
@@ -1219,6 +1228,7 @@
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
+            - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage2.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.glue.yml'
             - '.ci/snippet/FINISH'
