--- a/codeception.functional2.yml
+++ b/codeception.functional2.yml
@@ -2,8 +2,7 @@ namespace: PyzTest
 actor: Tester
 
 include:
-    - tests/PyzTest/Zed/*
-    - vendor/spryker/spryker/Bundles/[A-Qa-q]*/*
+    - vendor/spryker/spryker/Bundles/[R-Zr-z]*/*
 
 paths:
     tests: tests
